add showers data endpoint

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "esnext",
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
+        "resolveJsonModule": true,
         "outDir": "dist",
         "removeComments": true,
         "noImplicitAny": true,
