--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "type": "module",
     "dependencies": {
+        "@radix-ui/themes": "^3.1.6",
         "@types/react": "^18.2.64",
         "@types/react-dom": "^18.2.21",
         "@vitejs/plugin-react-swc": "^3.6.0",
@@ -33,5 +34,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "tailwindcss": "^3.4.16"
     }
 }
