--- a/app/package.json
+++ b/app/package.json
@@ -4,10 +4,12 @@
     "private": true,
     "type": "module",
     "dependencies": {
+        "@pixi/react": "^7.1.2",
         "@radix-ui/themes": "^3.1.6",
         "@types/react": "^18.2.64",
         "@types/react-dom": "^18.2.21",
         "@vitejs/plugin-react-swc": "^3.6.0",
+        "pixi.js": "^7.4.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.22.3",
