--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "postinstall": "npm run build --workspace=shared --workspace=api"
   },
   "devDependencies": {
+    "@types/css-font-loading-module": "^0.0.14",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4"
   },
