--- a/app/package.json
+++ b/app/package.json
@@ -6,10 +6,12 @@
     "dependencies": {
         "@pixi/filter-glow": "^5.2.1",
         "@pixi/react": "^7.1.2",
+        "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/themes": "^3.1.6",
         "@types/react": "^18.2.64",
         "@types/react-dom": "^18.2.21",
         "@vitejs/plugin-react-swc": "^3.6.0",
+        "motion": "^11.13.5",
         "pixi.js": "^7.4.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
